--- a/src/index.css
+++ b/src/index.css
@@ -213,3 +213,7 @@ input[type=submit]:disabled,input[type=button]:disabled {
   padding: 0.5vw;
   text-align: center;
 }
+
+.about-link, .about-link:visited {
+    color: white;
+}
